# scanalyze-deployment-platform

./: .gitignore  .tool-versions  ARCHITECTURE_ACCEPTANCE_GATES.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml  required-artifacts.yaml  sentinel_allowlist.yaml
.github/: PULL_REQUEST_TEMPLATE.md
ADR/: ADR-001-tenancy-model.md  ADR-002-organization-control-tower.md  ADR-003-state-backend.md  ADR-004-cross-account-identity.md  ADR-005-deployment-schemas.md  ADR-006-modules-contracts.md  ADR-007-artifact-supply-chain.md  ADR-008-region-ha-dr.md  ADR-009-threat-model.md  ADR-010-testing-rollout.md  ADR-011-monorepo-microservices-source.md  ADR-012-autonomous-deployment-orchestrator.md  ADR-013-deployment-manifest-and-contracts.md  ADR-014-frontend-config-ownership.md  ADR-015-identity-contract.md  ADR-016-release-graph-and-supply-chain.md  ADR-017-github-actions-release-orchestrator.md  ADR-018-stable-ci-governance.md  ADR-019-production-readiness-foundation.md  ADR-020-versioned-m2m-identity-binding.md  ADR-021-object-level-authorization.md  ADR-022-async-routing-ownership-and-dlq.md  ADR-023-enterprise-authorization-and-user-lifecycle.md  ADR-024-identity-control-plane-and-provider-boundary.md  ADR-025-human-authorization-enforcement.md  ADR-026-enterprise-user-lifecycle-and-recoverable-bootstrap.md  ADR-027-portable-frontend-source-ownership.md  ADR-028-portable-enterprise-user-console.md  ADR-029-strict-contracts-and-canonical-dag.md  ADR-030-registry-account-baseline-backend-locking.md  ADR-031-github-oidc-terminal-identity.md  ADR-032-build-once-and-supply-chain-fail-closed.md  (+18 more)
deployment/: layers.yaml  (+1 more)
(+1179 files in other folders)
